--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body {
     overflow: hidden;
     transition: .5s;
     margin: 15px 20px;
-    min-height: 100vh;
+    min-height: 100%;
   background-size: 300%;
   background-image: var(--gradient);
   -webkit-animation: bg-animation 10s infinite;
@@ -212,7 +212,8 @@ Left:100px;
     100% { transform: rotate(360deg); }
 } 
 i{
-    text-shadow: 0px 0px 100px;
+
+    text-shadow: 0px 0px 100px;
     animation: animate 2s infinite linear;
     
     padding: 1px 8px;
