--- a/index.html
+++ b/index.html
@@ -265,12 +265,10 @@ i{
     >
         <ul class="menu">
     <li>
-      <a href="
-      ">TEMA 1</a>
+      <a href="TEMA 1">TEMA 1</a>
    </li>
     <li>
-      <a href="
-      ">TEMA 2</a>
+      <a href="TEMA 2">TEMA 2</a>
     </li>
      <li>
       <a href="TEMA 3">TEMA 3</a>
