--- a/TEMA 2.html
+++ b/TEMA 2.html
@@ -152,7 +152,7 @@ INICIO</a>
 <h1>CSS en línea
 </h1>
 
-</article>
+
 <p>
 Usar un estilo en línea es una de las formas de insertar una hoja estilo. Con un estilo en línea, un único estilo es aplicado a un único elemento.<br /><br />
 
@@ -185,6 +185,26 @@ El atributo style puede contener cualquier propiedad CSS.
              <img width="100%" src="https://i.ibb.co/txtRYwt/Screenshot-20220708-201309.jpg" alt="Screenshot-20220708-201309" border="0">
              <img width="100%" src="https://i.ibb.co/2gzfH3k/Screenshot-20220708-201652.jpg" alt="Screenshot-20220708-201652" border="0">
              
+         </p>
+     </article>
+     <article>
+         <h1>
+             CSS externo
+         </h1>
+         <p>
+             Con este método, todas las reglas de estilo quedan almacenadas en un único archivo de texto, el cual es guardado con la extensión .css. 
+
+Posteriormente, este archivo <b>CSS</b>  es referenciado en EL <b>HTML</b> usando la etiqueta <b> link</b>.<br /> El elemento <b> link </b> va dentro de la sección <b>head</b>.<br /><br />
+
+He aquí un ejemplo:
+<img width="100%" src="https://i.ibb.co/T1n8rP5/Screenshot-20220709-114052.jpg" alt="Screenshot-20220709-114052" border="0">
+<img width="100%" src="https://i.ibb.co/Y3rmhbp/Screenshot-20220709-114426.jpg" alt="Screenshot-20220709-114426" border="0"></a>
+
+<b>
+    NOTA
+</b><br />
+Tanto directorios relativos como absolutos pueden ser utilizados para definir el href para el archivo CSS. En nuestro ejemplo, el directorio es relativo, ya que el archivo CSS está en el mismo directorio que el archivo HTML.
+
          </p>
      </article>
   </div>
